--- a/src/components/random-planet/random-planet.css
+++ b/src/components/random-planet/random-planet.css
@@ -21,3 +21,9 @@
   .random-planet .list-group-item .term {
     margin-right: .5rem;
   }
+
+  .spinner {
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em
+  }
