--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -81,7 +81,7 @@
     height: 94px;
     display: inline-block;
     overflow: hidden;
-    background: #1c1c1c;
+    background: #312e2e;
   }
   .ldio-uap0du6rq7b {
     width: 100%;
@@ -93,4 +93,10 @@
   }
   .ldio-uap0du6rq7b div { 
       box-sizing: content-box; 
-    }
+  }
+
+  .spinner {
+        margin-left: auto;
+    margin-right: auto;
+    width: 6em;
+  }
